<resources>
    <string name="app_name">Up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="btnLogin">Ingresar</string>
    <string name="singUp">Registrarse</string>
    <string name="name">Nombre</string>
    <string name="lastname">Apellido</string>
    <string name="dni">DNI</string>
    <string name="comission">Comision</string>
</resources>
